@@ -7,7 +7,6 @@ import java.util.List;
 import static java.util.Comparator.comparing;
 import static java.util.Comparator.comparingInt;
 import static java.util.Comparator.comparingLong;
-import static java.util.stream.Collectors.toList;
 
 /**
  * Ascending sort order is implied when not stated otherwise.
@@ -18,42 +17,42 @@ public class SortingAnswer {
         return persons.stream()
                 .map(Person::name)
                 .sorted()
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByAge(List<Person> persons) {
         return persons.stream()
                 .sorted(comparingInt(Person::age))
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByIdDescending(List<Person> persons) {
         return persons.stream()
                 .sorted(comparingLong(Person::id).reversed())
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByNameAndThenId(List<Person> persons) {
         return persons.stream()
                 .sorted(comparing(Person::name).thenComparingLong(Person::id))
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByAgeDescendingAndThenId(List<Person> persons) {
         return persons.stream()
                 .sorted(comparingInt(Person::age).reversed().thenComparingLong(Person::id))
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByNameAndThenIdDescending(List<Person> persons) {
         return persons.stream()
                 .sorted(comparing(Person::name).thenComparing(comparingLong(Person::id).reversed()))
-                .collect(toList());
+                .toList();
     }
     
     public static List<Person> sortByNameWithCaseInsensitiveOrder(List<Person> persons) {
         return persons.stream()
                 .sorted(comparing(Person::name, String.CASE_INSENSITIVE_ORDER))
-                .collect(toList());
+                .toList();
     }
 }
